grammar.js
    source_file: $ => repeat($.sentence),

    sentence: $ => choice(
      seq(
        optional($.fail),
        optional($.attributes),
        optional($.selector),
        choice(
          $._vernacular_command,
          $.ltac_definition,
          $._ltac_expr,
        ),
        choice(".", "...")
      ),
      $.proof_block,
      $.bullet
    ),

    fail: $ => "Fail",

    _vernacular_command: $ =>
      choice(
        $.require_command,
        $.import_command,
        $.export_command,
        $.create_hintdb_command,
        $.create_rewrite_hintdb_command,
        $.hint_command,
        $.evaluation_command,
        $.extraction_command,
        $.extract_command,
        $.set_command,
        $.unset_command,
        $.add_command,
        $.remove_command,
        $.test_command,
        $.show_proof_command,
        $.coercion_command,
        $.declare_command,
        $.open_scope_command,
        $.close_scope_command,

        $.theorem_command,
        $.definition_command,
        $.fixpoint_command,
        $.inductive_command,
        $.assumption_command,
        $.arguments_command,
        $.section_command,
        $.module_command,
        $.end_command,
        $.reserved_notation_command,
        $.notation_command,

        $.proof_command,
        $.qed_command,
        $.save_command,
        $.defined_command,
        $.admitted_command,
        $.abort_command,
      ),

    import_command: $ => seq(
      "Import",
      optional($.import_categories),
      repeat1($.filtered_import)
    ),

    neg_selection: $ => "-",

    import_categories: $ => seq(
      optional($.neg_selection),
      "(",
      field("category", $._name),
      repeat(seq(",", field("category", $._name))),
      ")"
    ),

    filtered_import: $ => seq(
      field("module", $._name),
      optional(seq(
        "(",
        $.filtered_import_item,
        repeat(seq(",", $.filtered_import_item)),
        ")"
      ))
    ),

    filtered_import_item: $ => seq(
      field("name", $._name),
      optional($.import_wildcard)
    ),

    import_wildcard: $ => "(..)",

    hint_command: $ => seq(
      "Hint",
      choice(
        $.hint_extern,
        seq(
          choice("Resolve", "Rewrite", "Constructors", "Unfold", "Immediate", "Transparent", "Opaque"),
          repeat1(field("name", $._name)),
          optional(seq(":", field("database", $.ident))))
      )),

    hint_extern: $ => seq(
      "Extern",
      field("cost", $.number),
      field("pattern", optional($._term)),
      "=>",
      field("tactic", $._ltac_expr),

      optional(seq(
        ":",
        repeat1(field("database", $.ident))
      ))
    ),

    evaluation_command: $ => seq(
      choice("Check", "Compute", "Print", "Search", "Locate"),
      $._term,
      optional(seq(":", $.type))
    ),

    definition_command: $ => seq(
      choice("Definition", "Example"),
      $.ident_decl,
      $._def_body
    ),

    _def_body: $ => choice(
      seq(
        repeat($.binder),
        optional(seq(":", $.type)),
        ":=",
        field("body", $._term)
      ),
      seq(
        repeat($.binder),
        ":",
        $.type
      )
    ),

    fixpoint_command: $ => seq(
      "Fixpoint",
      $._fix_definition,
      repeat(seq("with", $._fix_definition)),
    ),

    _fix_definition: $ => seq(
      $.ident_decl,
      repeat($.binder),
      optional($.fixannot),
      optional(seq(":", $.type)),
      optional(seq(":=", field("body", $._term))),
      optional($.decl_notations)
    ),

    fixannot: $ => choice(
      seq("{", "struct", $.ident, "}"),
      seq("{", "wf", $._term, $.ident, "}"),
      seq("{", "measure", $._atomic_term, optional($.ident), optional($._atomic_term), "}"),
    ),

    inductive_command: $ => seq(
      "Inductive",
      $.inductive_definition,
      repeat(seq("with", $.inductive_definition)),
    ),

    inductive_definition: $ => seq(
      field("name", $.ident),
      repeat($.binder),
      optional(seq("|", repeat($.binder))),
      optional(seq(":", $.type)),
      ":=",
      optional($.constructor_block),
      optional($.decl_notations)
    ),

    constructor_block: $ => seq(
      optional("|"),
      $.constructor,
      repeat(seq("|", $.constructor))
    ),

    constructor: $ => seq(
      repeat($._constructor_attr),
      field("name", $.ident),
      repeat($.binder),
      optional($.of_type_inst)
    ),

    of_type_inst: $ => seq(
      choice(":", ":>", "::", "::>"),
      $.type
    ),

    _constructor_attr: $ =>
      seq(
        "#",
        "[",
        $.attribute,
        repeat(seq(",", $.attribute)),
        "]"),

    notation_command: $ => seq(
      "Notation",
      $.notation_declaration
    ),

    notation_declaration: $ => seq(
      field("notation", $.string),
      ":=",
      field("definition", $._term),
      optional($.syntax_modifier_list),
      optional($.notation_scope)
    ),

    notation_scope: $ => seq(
      ":",
      field("scope_name", $.ident)
    ),

    syntax_modifier_list: $ => seq(
      "(",
      $.syntax_modifier,
      repeat(seq(",", $.syntax_modifier)),
      optional(","),
      ")"
    ),

    syntax_modifier: $ => choice(
      $.level_modifier,
      $.custom_entry_modifier,
      $.associativity_modifier,
      $.parsing_modifier,
      $.printing_modifier,
      $.format_modifier,
      $.plural_variable_modifier,
      $.singular_variable_modifier
    ),

    level_modifier: $ => $.at_level_num,

    at_level_num: $ => seq("at", "level", $.number),

    _term: $ => choice(
      $._atomic_term,
      $.application,
      $.lambda_function,
      $.quantifier_term,
      $.let_expression,
      $.fix_expression,
      $.if_expression,
      $.arrow_term,
      $._infix_operation,
      $.imp_evaluation_operation,
    ),

    _atomic_term: $ => seq(
      optional("'"),
      choice(
        $.ident,
        $.qualid,
        seq("@", $._name),
        $.scoped_term,
        $.number,
        $.string,
        $.metavariable,
        $.parenthesized_term,
        $.list_literal,
        $.match_expression,
        $.double_dot,

        $.custom_notation_block,
      ),
    ),

    parenthesized_term: $ => seq(
      "(",
      $._term,

      optional(choice(
        repeat1(seq(",", $._term)),
        repeat1(seq(";", $._term))
      )),

      optional(choice(",", ";")),
      ")"
    ),

    application: $ => prec.left('application', seq(
      $._term,
      repeat1(choice(
        seq("(", $.ident, ":=", $._term, ")"),
        seq("(", $.number, ":=", $._term, ")"),
        $._atomic_term
      ))
    )),

    match_expression: $ => seq(
      "match",
      $.case_item,
      repeat(seq(",", $.case_item)),
      optional(seq("return", $._term)),
      "with",
      optional(choice(
        seq(
          $.match_case,
          repeat(seq("|", $.match_case))
        ),
        repeat1(seq("|", $.match_case)),
      )),
      "end"
    ),

    case_item: $ => seq(
      $._term,
      optional($.term_as_clause),
      optional($.term_in_pattern),
    ),

    match_case: $ => seq(
      $.pattern_option,
      repeat(seq("|", $.pattern_option)),
      "=>",
      field("body", $._term)
    ),

    pattern_option: $ => seq(
      field("pattern", $._pattern),
      repeat(seq(",", field("pattern", $._pattern))),
    ),

    if_expression: $ => prec.right('binder', seq(
      "if",
      field("condition", $._term),
      optional($.term_as_clause),
      optional($.term_return_clause),
      "then",
      field("then", $._term),
      "else",
      field("else", $._term),
    )),

    negation_operation: $ => prec('negation', seq(
      "~",
      $._term
    )),

    cons_operation: $ => prec.right('list_ops', seq(
      $._term,
      "::",
      $._term
    )),

    app_operation: $ => prec.right('list_ops', seq(
      $._term,
      "++",
      $._term
    )),

    multiplicative_operation: $ => prec.left('multiplicative', seq(
      $._term,
      choice("*", "/"),
      $._term
    )),

    additive_operation: $ => prec.left('additive', seq(
      $._term,
      choice("+", "-"),
      $._term
    )),

    comparison_operation: $ => prec.left('comparison', seq(
      $._term,
      choice("=", "<>", "<", "<=", ">", ">=", "=?", "<>?", "<?", "<=?", ">?", ">=?"),
      $._term
    )),

    logical_conjunction: $ => prec.right('conjunction', seq(
      $._term,
      "/\\",
      $._term
    )),

    logical_disjunction: $ => prec.right('disjunction', seq(
      $._term,
      "\\/",
      $._term
    )),

    logical_equivalence: $ => prec.left('equivalence', seq(
      $._term,
      "<->",
      $._term
    )),

    custom_operation: $ => prec.left('custom', seq(
      $._term,
      alias(
        choice(
          // any combination, but a dot
          /[\-!#$%&*+\/<=>?@^|~;]+/,
          // any combination with a dot, but using at least one non-dot char
          /[\-!#$%&*+.\/<=>?@^|~;]*[\-!#$%&*+\/<=>?@^|~;][\-!#$%&*+.\/<=>?@^|~;]*/,
          /\.\./,
          /\.\.\.\.+/
        )
        , $.custom_operator),
      $._term
    )),

    arrow_term: $ => prec.right('arrow_term', seq(
      field("antecedent", $._term),
      "->",
      field("consequent", $._term)
    )),

    // ~~~~~~~~~~~~~~~~ Patterns ~~~~~~~~~~~~~~~~
    // https://rocq-prover.org/doc/V9.2.0/refman/language/core/variants.html#grammar-token-term_match

    _pattern: $ => choice(
      $._pattern_atomic,
      $.pattern_application,
      $.infix_pattern,

      $.custom_notation_block,
    ),

    _pattern_atomic: $ => choice(
      $.wildcard,
      $._name,
      $.number,
      $.string,
      $.parenthesized_pattern,
      $.list_pattern,
      seq("{", "|", repeat(seq($._name, ":=", $._pattern)), "|", "}"),
    ),

    parenthesized_pattern: $ => seq(
      "(",
      $._pattern,
      repeat(seq(choice("|", ","), $._pattern)),
      ")"
    ),

    list_pattern: $ => seq(
      "[",
      optional(seq(
        $._pattern,
        repeat(seq(";", $._pattern)),
      )),
      "]"
    ),

    pattern_application: $ => prec.left('application', seq(
      field("constructor", $._name),
      repeat1($._pattern_atomic)
    )),

    infix_pattern: $ => prec.right('list_ops', seq(
      $._pattern,
      choice("::", "++"),
      $._pattern,
    )),

    type: $ => $._term,

    _binder_name: $ => choice($.wildcard, $._name),

    binder: $ => choice(
      $._binder_name,
      seq("(", repeat($._binder_name), ":", $.type, ")"),
      seq("(", $._binder_name, optional(seq(":", $.type)), ":=", $._term, ")"),
      $.implicit_binders,
      seq("(", $._binder_name, ":", $.type, "|", $._term, ")"),
      seq($.destructuring_pattern),
    ),

    implicit_binders: $ => choice(
      seq("{", repeat1($._binder_name), optional(seq(":", $.type)), "}"),
      seq("[", repeat1($._binder_name), optional(seq(":", $.type)), "]")
    ),

    _ltac_expr: $ => choice(
      $.parenthesized_tactic,

      $.tactic_sequence,
      $.tactic_branch,
      $.tactic_invocation,

      $.tactic_or,
      $.match_goal,
    ),

    tactic_sequence: $ => prec.left('tactic_sequence', seq(
      $._ltac_expr,
      ";",
      $._ltac_expr
    )),

    tactic_invocation: $ => choice(
      $.intros_tactic,
      $.assert_tactic,
      $.rewrite_tactic,
      $.tactical,
      $.generic_tactic
    ),

    generic_tactic: $ => prec.left('tactic_application', seq(
      field("name", $.ident),
      optional($.generic_tactic_body),
      repeat(seq(",", $.generic_tactic_body)),
      optional(",")
    )),

    _name: $ => choice(
      $.ident,
      $.qualid
    ),

    ident: $ => /[\p{L}_][\p{L}_\p{N}']*/u,

    ident_decl: $ => seq(
      $.ident,
    ),


    number: $ => choice(
      /\d[\d_]*(\.[\d_]+)?([eE][+-]?\d[\d_]*)?/,
      /0[xX][0-9a-fA-F][0-9a-fA-F_]*(\.[0-9a-fA-F_]+)?([pP][+-]?\d[\d_]*)?/
    ),

    string: $ => seq(
      '"',
      repeat(choice(
        /[^"]/,
        '""'
      )),
      '"'
    ),

    wildcard: $ => "_",

    // Rules for Software Foundations Imp Chapters
    imp_program: $ => repeat1($._imp_token),

    _imp_token: $ => choice(
      $.ident,
      $.number,
      ":=",
      /[+\-*/&=<>!~|%;]+/,
      seq("(", repeat($._imp_token), ")"),
      seq("[", repeat($._imp_token), "]"),
      seq("{", repeat($._imp_token), "}")
    ),
  }
});
